feat(core): added report script